# futon

./: .env  Cargo.toml  Justfile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml
futon_core/: Cargo.toml
futon_core/src/: body.rs  credentials.rs  error.rs  lib.rs  request.rs  response.rs
src/: auth.rs  client.rs  db.rs  ddoc.rs  document.rs  error.rs  lib.rs  meta.rs  request.rs  response.rs
src/client/: hyper.rs
tests/: db_test.rs  document_test.rs  meta_test.rs
tests/common/: document.rs  image.rs  mod.rs
