[package]
name = "futon"
version = "0.1.0"
edition = "2021"

[features]
default = ["hyper", "tls-rustls"]
tls-rustls = ["hyper-rustls"]
tls-openssl = ["hyper-tls"]

[dependencies]
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = [] }
thiserror = "1"
http = "0.2"
http-body = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
url = "2"
tracing = "0.1"

hyper-tls = { version = "0.5", optional = true }

hyper-rustls = { version = "0.23", optional = true, features = ["http2"] }
secstr = { version = "0.5" }
base64 = "0.13"

[dependencies.hyper]
version = "0.14"
optional = true
features = [
    "client",
    "http1",
    "http2",
    "stream",
    "runtime", 
]

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tracing-test = "0.1"
rand = "0.8"