[package]
name = "futon_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["hyper", "tls-rustls"]
tls-rustls = ["hyper-rustls"]

[dependencies]
thiserror = "1"
tower = { version = "0.4" } #, features = ["util", "make"] }
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.10"
hyper-rustls = { version = "0.23", optional = true, features = ["http2"] }
base64 = "0.13"
url = "2"
secstr = { version = "0.5" }
tracing = "0.1"

[dependencies.hyper]
version = "0.14"
optional = true
features = [
    "client",
    "http1",
    "http2",
    "stream",
    "runtime", 
]

[dev-dependencies]
anyhow = "1"